--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,59 @@
-Flask
-Flask-SQLAlchemy
-Flask-Migrate
-Flask-WTF
-Flask-Login
-Werkzeug
-python-dotenv
+alembic==1.14.0
+amqp==5.3.1
+aniso8601==9.0.1
+async-timeout==5.0.1
+attrs==24.2.0
+billiard==4.2.1
+blinker==1.9.0
+celery==5.4.0
+celery-sqlalchemy-scheduler==0.3.0
+certifi==2024.8.30
+charset-normalizer==3.4.0
+click==8.1.7
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
+colorama==0.4.6
+flasgger==0.9.7.1
+Flask==3.1.0
+Flask-Admin==1.6.1
+Flask-JWT-Extended==4.7.1
+Flask-Login==0.6.3
+Flask-Migrate==4.0.7
+Flask-RESTful==0.3.10
+flask-restx==1.3.0
+Flask-SQLAlchemy==3.1.1
+flask-swagger-ui==4.11.1
+Flask-WTF==1.2.2
+greenlet==3.1.1
+idna==3.10
+importlib_metadata==8.5.0
+importlib_resources==6.4.5
+itsdangerous==2.2.0
+Jinja2==3.1.4
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+kombu==5.4.2
+Mako==1.3.8
+MarkupSafe==3.0.2
+mistune==3.0.2
+packaging==24.2
+prompt_toolkit==3.0.48
+PyJWT==2.10.1
+python-dateutil==2.9.0.post0
+pytz==2024.2
+PyYAML==6.0.2
+redis==5.2.1
+referencing==0.35.1
+requests==2.32.3
+rpds-py==0.22.3
+six==1.17.0
+SQLAlchemy==2.0.36
+typing_extensions==4.12.2
+tzdata==2024.2
+urllib3==2.2.3
+vine==5.1.0
+wcwidth==0.2.13
+Werkzeug==3.1.3
+WTForms==3.2.1
+zipp==3.21.0
